--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.42.1",
-        "sass-loader": "^12.1.0"
+        "sass-loader": "^12.1.0",
+        "tailwindcss": "^2.2.16"
     }
 }
