--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "sass": "^1.42.1",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^2.2.16"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.3.4"
     }
 }
